<?xml version="1.0" encoding="UTF-8" standalone="no"?>

<!--
   Copyright [2024] [Kiran Ayyagari]
   Copyright [2025-2026] [Diridium Technologies Inc.]

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.diridium</groupId>
    <artifactId>simple-channel-history</artifactId>
    <version>${revision}</version>

    <name>Simple Channel History</name>
    <packaging>pom</packaging>

    <properties>
        <revision>2.5.0</revision>

        <plugin.supported.mc.versions>${mc.version}</plugin.supported.mc.versions>

        <mc.version>4.5.2</mc.version>
        <ognl.version>3.2.15</ognl.version>
        <javax-servlet.version>4.0.1</javax-servlet.version>
        <javax-rs-api.version>2.0.1</javax-rs-api.version>
        <commons-beanutils.version>1.9.4</commons-beanutils.version>
        <xstream.version>1.4.18</xstream.version>
        <junit.version>4.13.2</junit.version>
        <rhino.version>1.7.13</rhino.version>
        <xpp3.version>1.1.4c</xpp3.version>
        <commons-io.version>2.10.0</commons-io.version>
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <log4j.version>2.17.2</log4j.version>
        <javassist.version>3.28.0-GA</javassist.version>
        <slf4j.version>1.7.32</slf4j.version>
        <mybatis.version>3.5.9</mybatis.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Signing disabled by default. Use -Psigning to enable. -->
        <signing.skip>true</signing.skip>
    </properties>

    <profiles>
        <profile>
            <id>signing</id>
            <properties>
                <signing.skip>false</signing.skip>
                <signing.keystore>NONE</signing.keystore>
                <signing.storetype>PKCS11</signing.storetype>
                <signing.providerClass>sun.security.pkcs11.SunPKCS11</signing.providerClass>
                <signing.providerArg>${user.dir}/yubikey-pkcs11.cfg</signing.providerArg>
                <signing.alias>Certificate for PIV Authentication</signing.alias>
                <signing.storepass>${env.YUBIKEY_PIN}</signing.storepass>
                <signing.certchain>${user.dir}/certchain.pem</signing.certchain>
                <signing.tsa>http://timestamp.digicert.com</signing.tsa>
            </properties>
        </profile>
    </profiles>

    <organization>
        <name>Diridium Technologies Inc.</name>
        <url>https://github.com/pacmano1/simple-channel-history</url>
    </organization>

    <repositories>
        <repository>
            <id>mirth-libs</id>
            <url>https://repo.repsy.io/mvn/kpalang/mirthconnect</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.mirth.connect</groupId>
            <artifactId>mirth-server</artifactId>
            <version>${mc.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mirth.connect</groupId>
            <artifactId>donkey-server</artifactId>
            <version>${mc.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mirth.connect</groupId>
            <artifactId>mirth-client-core</artifactId>
            <version>${mc.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mirth.connect.connectors</groupId>
            <artifactId>vm-shared</artifactId>
            <version>${mc.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mirth.connect.plugins.datatypes</groupId>
            <artifactId>datatype-raw-shared</artifactId>
            <version>${mc.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mirth.connect.plugins.datatypes</groupId>
            <artifactId>datatype-hl7v2-shared</artifactId>
            <version>${mc.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mirth.connect.connectors</groupId>
            <artifactId>js-shared</artifactId>
            <version>${mc.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mirth.connect.plugins</groupId>
            <artifactId>javascriptstep-shared</artifactId>
            <version>${mc.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mirth.connect.connectors</groupId>
            <artifactId>tcp-shared</artifactId>
            <version>${mc.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mirth.connect.plugins</groupId>
            <artifactId>mllpmode-shared</artifactId>
            <version>${mc.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mirth.connect.plugins</groupId>
            <artifactId>http-shared</artifactId>
            <version>${mc.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>${javax-servlet.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.ws.rs</groupId>
            <artifactId>javax.ws.rs-api</artifactId>
            <version>${javax-rs-api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>${commons-beanutils.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>ognl</groupId>
            <artifactId>ognl</artifactId>
            <version>${ognl.version}</version>
            <exclusions>
                <exclusion>
                    <!-- excluding the dependency to avoid classloading issues
                       because MC already bundles a higher version. -->
                    <groupId>org.javassist</groupId>
                    <artifactId>javassist</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>${javassist.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.thoughtworks.xstream</groupId>
            <artifactId>xstream</artifactId>
            <version>${xstream.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>xpp3</groupId>
            <artifactId>xpp3</artifactId>
            <version>${xpp3.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mozilla</groupId>
            <artifactId>rhino</artifactId>
            <version>${rhino.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis</artifactId>
            <version>${mybatis.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <modules>
        <module>server</module>
        <module>shared</module>
        <module>client</module>
        <module>package</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Application-Name>Simple Channel History</Application-Name>
                            <url>${project.url}</url>
                            <authors>Kiran Ayyagari, Diridium Technologies Inc.</authors>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
